Fix test environment